updating hero code scaling main-content text and overflow issue fixed

--- a/src/assets/scss/media.scss
+++ b/src/assets/scss/media.scss
@@ -1189,6 +1189,13 @@
     margin-top: -40px;
   }
   .ipad_img {
-    height: 66vh;
+    height: 70vh;
+  }
+  .hero_slide_1 h3,
+  .hero_slide_2 h3 {
+    margin-top: 40px !important;
+  }
+  .hero_slide_para_2 {
+    padding-top: 24px !important;
   }
 }
